Fixed menu buttons

--- a/titlestyle.css
+++ b/titlestyle.css
@@ -66,6 +66,7 @@ hr{
 
     position: absolute;
     z-index: 1;
+    font-family: bodyFont;
 }
 
 .tooltip:hover .tooltiptext {
@@ -77,10 +78,10 @@ hr{
 /* Games Button */
 .button_games{
     background-image: url(assets/button_games.png);
-    background-color: transparent;
     width: 256px;
     height: 128px;
-    border-width: 0px;
+    border-style: none;
+    border-radius: 11px;
     mix-blend-mode: screen;
     box-sizing: border-box;
     display: inline-block;
@@ -99,11 +100,13 @@ hr{
 /* Music Button */
 .button_music{
     background-image: url(assets/button_music.png);
-    background-color: transparent;
     width: 256px;
     height: 128px;
-    border-width: 0px;
+    border-style: none;
+    border-radius: 11px;
     mix-blend-mode: screen;
+    box-sizing: border-box;
+    display: inline-block;
     transition: scale 0.1s;
 }
 
@@ -119,11 +122,13 @@ hr{
 /* About Button */
 .button_about{
     background-image: url(assets/button_about.png);
-    background-color: transparent;
     width: 256px;
     height: 128px;
-    border-width: 0px;
+    border-style: none;
+    border-radius: 11px;
     mix-blend-mode: screen;
+    box-sizing: border-box;
+    display: inline-block;
     transition: scale 0.1s;
 }
 
