--- a/titlestyle.css
+++ b/titlestyle.css
@@ -13,9 +13,13 @@ h1 {
     text-shadow: 2px 2px blue;
 }
 h2 {
-    color: cyan;
+    color: white;
     font-family: bodyFont;
-    text-align: center; 
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    font-weight: lighter;
 }
 p{
     font-size: x-large;
@@ -31,6 +35,23 @@ p{
     padding: 25px;
     text-align: center;
     background-color: black;
+    outline-color: yellow;
+}
+
+.bottomdiv{
+    outline-width: 5px;
+    outline-style: solid;
+    border-radius: 25px;
+    padding: 5px;
+    margin: 10px;
+    background-color: black;
+    width: 40%;
+    display: inline-flex;
+    flex-direction: column;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
 }
 
 .tilebar{
@@ -150,6 +171,33 @@ hr{
     scale: 0.8;
 }
 
+#game_button{
+    border-width: 4px;
+    border-radius: 15px;
+    border-style: solid;
+    display: inline-block;
+
+    box-sizing: border-box;
+    width: 256px;
+    height: 128px;
+    padding: 25px;
+    text-align: center;
+    background-color: black;
+    background-position: center;
+    margin-top: 10px;
+
+    border-color: cornflowerblue;
+    transition: scale 0.2s;
+}
+
+#game_button:active{
+    scale: 0.8;
+}
+
+#game_button:hover{
+    animation: game_anim 3s infinite;
+}
+
 .contactbutton{
     background-color: transparent;
     box-sizing: border-box;
@@ -232,4 +280,43 @@ hr{
 @keyframes title_button_deselect {
     0%{ scale: 0.8;}
     100%{ scale: 1;}
+}
+
+@keyframes game_anim {
+    100%,0%{
+        border-color: rgb(255,0,0);
+    }
+    8%{
+        border-color: rgb(255,127,0);
+    }
+    16%{
+        border-color: rgb(255,255,0);
+    }
+    25%{
+        border-color: rgb(127,255,0);
+    }
+    33%{
+        border-color: rgb(0,255,0);
+    }
+    41%{
+        border-color: rgb(0,255,127);
+    }
+    50%{
+        border-color: rgb(0,255,255);
+    }
+    58%{
+        border-color: rgb(0,127,255);
+    }
+    66%{
+        border-color: rgb(0,0,255);
+    }
+    75%{
+        border-color: rgb(127,0,255);
+    }
+    83%{
+        border-color: rgb(255,0,255);
+    }
+    91%{
+        border-color: rgb(255,0,127);
+    }
 }
