--- a/titlestyle.css
+++ b/titlestyle.css
@@ -21,6 +21,18 @@ h2 {
     margin-top: 2px;
     font-weight: lighter;
 }
+
+h3 {
+    color: white;
+    font-family: bodyFont;
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+    font-weight: lighter;
+    text-shadow: 2px 2px black;
+}
+
 p{
     font-size: x-large;
     font-family: bodyFont;
